# rusty-brew

./: .gitignore  Cargo.toml  notater.org  readme.md
.cargo/: config
client/: CasoController.py  api-client.py
deliverables/: oppgavetekst
deliverables/modularization/: description.tex  main.tex
deliverables/rapport/: main.tex
deliverables/rapport/text/: design.tex  implementasjon.tex  innledning.tex  konklusjon.tex  sammendrag.tex  spec.tex  test.tex  vedlegg.tex
server/: Cargo.toml  build.rs
server/src/: main.rs
server/src/controller/: ds18b20.rs  led.rs  mock.rs  mod.rs  pid.rs
server/src/controller/output/: mod.rs
server/src/controller/sensor/: mod.rs
server/src/interface/: mod.rs  types.rs
server/src/log/: mod.rs
src/: main.rs
src/controller/: mock.rs  mod.rs
src/controller/output/: mod.rs
src/controller/sensor/: mod.rs
