[package]
name = "rusty-brew"
version = "0.1.0"
authors = ["Didrik Rokhaug <didrik.rokhaug@gmail.com>"]

[dependencies]
rocket = "0.4.0-rc.1"
rocket_codegen = "0.4.0-rc.1"
rocket_contrib = "0.4.0-rc.1"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
